# DyberVPN

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  PHASE2_SUMMARY.md  README.md  SECURITY.md  build.ps1  client.toml  client_keys.txt  release-signing.mldsa.pub  server.toml  server_keys.txt  test_client.toml  test_server.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  desktop-ci.yml  desktop-release.yml  on-push.yaml  release.yml  security-audit.yml  semgrep.yml
benchmarks/: crypto_bench.rs
boringtun/: Cargo.toml
boringtun-cli/: Cargo.toml
boringtun/src/: lib.rs
boringtun/src/noise/: handshake.rs  hybrid_handshake.rs  hybrid_integration.rs  mod.rs  rate_limiter.rs  session.rs
config/: enterprise-server.toml  example-client.toml  example-revoked-keys.json  example-server.toml  test-server.toml
crates/dybervpn-broker/: Cargo.toml
crates/dybervpn-broker/src/: auth.rs  broker.rs  config.rs  control.rs  error.rs  lib.rs  peer.rs  registry.rs  session.rs
crates/dybervpn-cli/: Cargo.toml
crates/dybervpn-cli/src/: main.rs
crates/dybervpn-metrics/: Cargo.toml
crates/dybervpn-metrics/src/: health.rs  lib.rs  logging.rs  metrics.rs  posture.rs  server.rs
crates/dybervpn-protocol/: Cargo.toml
crates/dybervpn-protocol/benches/: crypto_bench.rs
crates/dybervpn-protocol/src/: crypto.rs  fips.rs  lib.rs  software.rs  types.rs
crates/dybervpn-protocol/src/config/: mod.rs
crates/dybervpn-tunnel/: Cargo.toml
crates/dybervpn-tunnel/src/: audit.rs  config.rs  connector.rs  daemon.rs  device.rs  enrollment.rs  error.rs  lib.rs  linux.rs  macos.rs  policy.rs  revocation.rs  tunnel.rs  windows.rs
deploy/: Dockerfile  client.toml.example  docker-compose.yml  dybervpn.service  dybervpn@.service  install.sh  server.toml.example
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.js
desktop/src/: App.jsx  App.module.css  global.css  main.jsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/components/: ErrorBoundary.jsx  Icon.jsx  ShieldIcon.jsx
desktop/src/components/ConfirmModal/: ConfirmModal.jsx  ConfirmModal.module.css
desktop/src/components/ContextMenu/: ContextMenu.jsx  ContextMenu.module.css
desktop/src/components/EnrollModal/: EnrollModal.jsx  EnrollModal.module.css
desktop/src/components/InputModal/: InputModal.jsx  InputModal.module.css
desktop/src/components/KeyLifecycleModal/: KeyLifecycleModal.jsx  KeyLifecycleModal.module.css
desktop/src/components/LatticeCanvas/: LatticeCanvas.jsx  LatticeCanvas.module.css
desktop/src/components/ModeTag/: ModeTag.jsx  ModeTag.module.css
desktop/src/components/NumInput/: NumInput.jsx  NumInput.module.css
desktop/src/components/Select/: Select.jsx  Select.module.css
desktop/src/components/SettingRow/: SettingRow.jsx  SettingRow.module.css
desktop/src/components/StatusDot/: StatusDot.jsx  StatusDot.module.css
desktop/src/components/Toast/: Toast.jsx  Toast.module.css
desktop/src/components/Toggle/: Toggle.jsx  Toggle.module.css
desktop/src/components/WindowControls/: WindowControls.jsx  WindowControls.module.css
desktop/src/hooks/: useTraffic.js  useUptime.js
desktop/src/lib/: store.js  tauri.js
desktop/src/pages/AboutPage/: AboutPage.jsx  AboutPage.module.css
desktop/src/pages/KeyManagerPage/: KeyManagerPage.jsx  KeyManagerPage.module.css
desktop/src/pages/SettingsPage/: SettingsPage.jsx  SettingsPage.module.css
desktop/src/pages/TunnelsPage/: TunnelDetail.jsx  TunnelDetail.module.css  TunnelSidebar.jsx  TunnelSidebar.module.css  TunnelsPage.jsx  TunnelsPage.module.css
desktop/src/router/: RouterContext.jsx
docs/: README.md  architecture.md  cli-reference.md  configuration.md  deployment.md  enterprise-features.md  enterprise-security.md  installation.md  quickstart.md  security-model.md  troubleshooting.md
test-configs/: client-keys.txt  client.toml  enterprise-server.toml  pqonly-client.toml  pqonly-server.toml  revoked-keys.json  server-keys.txt  server.toml  test_client.toml  test_server.toml
