# DyberVPN Workspace Configuration
# Copyright 2026 Dyber, Inc.

[workspace]
resolver = "2"
members = [
    "boringtun",
    "crates/dybervpn-protocol",
    "crates/dybervpn-tunnel",
    "crates/dybervpn-metrics",
    "crates/dybervpn-cli",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/dyber-pqc/DyberVPN"
homepage = "https://github.com/dyber-pqc/DyberVPN"
documentation = "https://github.com/dyber-pqc/DyberVPN/tree/main/docs"
authors = ["Dyber, Inc. <engineering@dyber.org>"]
keywords = ["vpn", "wireguard", "post-quantum", "cryptography", "pqc", "ml-kem", "ml-dsa"]
categories = ["network-programming", "cryptography", "command-line-utilities"]
description = "Post-quantum VPN with ML-KEM-768 and ML-DSA-65 - WireGuard compatible"

[workspace.dependencies]
# Classical Cryptography
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets", "static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Symmetric Crypto & AEAD
ring = "0.17"
chacha20poly1305 = "0.10.0-pre.1"
aead = "0.5.0-pre.2"

# Hashing
blake2 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"

# Encoding
base64 = "0.13"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Network
socket2 = { version = "0.5", features = ["all"] }
ip_network = "0.4"
ip_network_table = "0.2"

# Platform
libc = "0.2"
parking_lot = "0.12"

# Testing
mock_instant = "0.3"

# Secure memory
zeroize = { version = "1.7", features = ["derive"] }

# Post-Quantum Cryptography
ml-kem = "0.2"      # NIST FIPS 203 - ML-KEM-768
ml-dsa = "0.1.0-rc.7"  # NIST FIPS 204 - ML-DSA-65

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
