[package]
name = "dybervpn-broker"
description = "ZTNA Broker for DyberVPN — relay between Clients and Connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
dybervpn-protocol = { path = "../dybervpn-protocol" }
dybervpn-tunnel = { path = "../dybervpn-tunnel" }
boringtun = { path = "../../boringtun" }

# Crypto
x25519-dalek.workspace = true
ml-kem.workspace = true
ml-dsa.workspace = true
sha2.workspace = true
rand_core.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Encoding
base64.workspace = true
hex.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Networking
socket2.workspace = true

# Concurrent data structures
dashmap = "6"

# Secure memory
zeroize.workspace = true

[dev-dependencies]
tokio-test = "0.4"
rand_core.workspace = true
toml.workspace = true
