[package]
name = "dybervpn-cli"
description = "Command-line interface for DyberVPN"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "dybervpn"
path = "src/main.rs"

[dependencies]
dybervpn-protocol = { path = "../dybervpn-protocol" }
dybervpn-tunnel = { path = "../dybervpn-tunnel" }

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
base64.workspace = true
x25519-dalek.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = "0.4"
ctrlc = "3.4"
