[package]
name = "dybervpn-metrics"
description = "Observability and metrics for DyberVPN"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["prometheus"]
prometheus = ["prometheus-client"]

[dependencies]
# Metrics
prometheus-client = { version = "0.24", optional = true }

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono = "0.4"

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP server for metrics endpoint
axum = { version = "0.8", features = ["http1"], optional = true }
tokio.workspace = true

[dev-dependencies]
tokio-test = "0.4"
