[package]
name = "dybervpn-protocol"
description = "Post-quantum cryptographic protocol implementation for DyberVPN"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["software-backend"]
software-backend = []

[dependencies]
# PQC - ML-KEM (pure Rust, NIST FIPS 203)
ml-kem.workspace = true

# PQC - ML-DSA (pure Rust, NIST FIPS 204)
ml-dsa.workspace = true

# Classical crypto
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true

# Hashing & KDF
blake2.workspace = true
hmac.workspace = true
sha2.workspace = true
hkdf.workspace = true

# Encoding
base64.workspace = true
hex.workspace = true

# Serialization
serde.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Secure memory
zeroize.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "crypto_bench"
harness = false
