[package]
name = "dybervpn-tunnel"
description = "Cross-platform TUN/TAP tunnel management for DyberVPN"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
dybervpn-protocol = { path = "../dybervpn-protocol" }
boringtun = { path = "../../boringtun" }

# Crypto
x25519-dalek.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
hex.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Networking
socket2.workspace = true

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
wintun = "0.5"

[dev-dependencies]
tokio-test = "0.4"
